--- a/realsense_normal_estimate/CMakeLists.txt
+++ b/realsense_normal_estimate/CMakeLists.txt
@@ -12,11 +12,12 @@ find_package(catkin REQUIRED COMPONENTS
   image_geometry
   roscpp
   image_transport
+  pcl_ros
 )
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
-
+find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
