--- a/localization_manager/CMakeLists.txt
+++ b/localization_manager/CMakeLists.txt
@@ -105,7 +105,7 @@ find_package(Eigen3 REQUIRED)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
+  INCLUDE_DIRS include
 #  LIBRARIES localization_manager
 #  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
@@ -118,7 +118,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+ include
  ${catkin_INCLUDE_DIRS}
  ${EIGEN3_INCLUDE_DIR}
 )
