--- a/data_compresor/CMakeLists.txt
+++ b/data_compresor/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   nav_msgs
   wireless_msgs
   sensor_msgs
+  tf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -139,7 +140,7 @@ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(compressor_node src/compressor.cpp)
+add_executable(compressor_node src/sender.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -149,13 +150,19 @@ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-# add_dependencies(compressor_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(compressor_node ${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-#target_link_libraries(compressor_node
-#   ${catkin_LIBRARIES}
-#   ${Boost_LIBRARIES}
-#)
+target_link_libraries(compressor_node
+   ${catkin_LIBRARIES}
+   ${Boost_LIBRARIES}
+   ${PROJECT_NAME}
+  
+)
+
+target_link_libraries( ${PROJECT_NAME}
+   ${ZLIB_LIBRARIES}
+)
 
 #############
 ## Install ##
@@ -206,7 +213,7 @@ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 ## Add gtest based cpp test target and link libraries
 catkin_add_gtest(${PROJECT_NAME}-test tests/test_laserscan.cpp)
 if(TARGET ${PROJECT_NAME}-test)
-  target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME} ${ZLIB_LIBRARIES})
+  target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 endif()
 
 ## Add folders to be run by python nosetests
