--- a/data_compresor/CMakeLists.txt
+++ b/data_compresor/CMakeLists.txt
@@ -141,6 +141,8 @@ add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(compressor_node src/sender.cpp)
+add_executable(decompressor_node src/reciever.cpp)
+
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -151,13 +153,19 @@ add_executable(compressor_node src/sender.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 add_dependencies(compressor_node ${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(decompressor_node ${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(compressor_node
    ${catkin_LIBRARIES}
    ${Boost_LIBRARIES}
    ${PROJECT_NAME}
-  
+)
+
+target_link_libraries(decompressor_node
+   ${catkin_LIBRARIES}
+   ${Boost_LIBRARIES}
+   ${PROJECT_NAME}
 )
 
 target_link_libraries( ${PROJECT_NAME}
