--- a/data_compresor/package.xml
+++ b/data_compresor/package.xml
@@ -53,14 +53,20 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>wireless_msgs</build_depend>
+    <build_depend>amapper</build_depend>
+
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>wireless_msgs</build_export_depend>
+    <build_depend>amapper</build_depend>
+
   <exec_depend>roscpp</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>wireless_msgs</exec_depend>
+    <build_depend>amapper</build_depend>
+
 
 
   <!-- The export tag contains other, unspecified, tags -->
