--- a/realsense_normal_estimate/package.xml
+++ b/realsense_normal_estimate/package.xml
@@ -51,10 +51,12 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_geometry</build_depend>
+  <build_depend>amapper</build_depend>
   <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>image_geometry</build_export_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>image_geometry</exec_depend>
+  <exec_depend>amapper</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
