--- a/localization_manager/CMakeLists.txt
+++ b/localization_manager/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED
     geometry_msgs
     nav_msgs
     amapper
+    tf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -137,7 +138,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(${PROJECT_NAME}_node  src/ugv.cpp)
-
+add_executable(odom_repub src/simple_odom_publisher.cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -147,12 +148,15 @@ add_executable(${PROJECT_NAME}_node  src/ugv.cpp)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
+add_dependencies(odom_repub ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node
   ${catkin_LIBRARIES}
 )
 
+target_link_libraries(odom_repub
+  ${catkin_LIBRARIES}
+)
 #############
 ## Install ##
 #############
