Add support for clustering

--- a/amapper/CMakeLists.txt
+++ b/amapper/CMakeLists.txt
@@ -129,6 +129,7 @@ include_directories(
 add_library(${PROJECT_NAME}
   src/${PROJECT_NAME}/grid.cpp
   src/${PROJECT_NAME}/RayTracer.cpp
+  src/${PROJECT_NAME}/cluster.cpp
   src/devices/laserscan.cpp
   src/raytracers/NaiveRayTracer.cpp
 )
