--- a/simple_obstacle_avoidance/package.xml
+++ b/simple_obstacle_avoidance/package.xml
@@ -53,6 +53,7 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>amapper</build_depend>
 
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
@@ -62,6 +63,8 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>tf</exec_depend>
 
+  <depend>actionlib</depend>
+  <depend>move_base_msgs</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
