--- a/simple_obstacle_avoidance/config/move_base.yml
+++ b/simple_obstacle_avoidance/config/move_base.yml
@@ -1,4 +1,7 @@
-
+max_planning_retries: 2
+recovery_behavior_enabled: false
+controller_patience: 5
+oscillation_timeout: 10
 
 TrajectoryPlannerROS:
     max_vel_x: 0.45
@@ -22,7 +25,7 @@ local_costmap:
     width: 20
     height: 20
     resolution: 0.05
-    footprint: [[0.5, 0.5], [0.5, -0.5], [-0.5, -0.5], [-0.5, 0.5]]
+    footprint: [[0.35, 0.35], [0.35, -0.35], [-0.35, -0.35], [-0.35, 0.35]]
     transform_tolerance: 5
     update_frequency: 5
     publish_frequency: 5
