update amapper functions

--- a/amapper/CMakeLists.txt
+++ b/amapper/CMakeLists.txt
@@ -130,8 +130,10 @@ add_library(${PROJECT_NAME}
   src/${PROJECT_NAME}/grid.cpp
   src/${PROJECT_NAME}/RayTracer.cpp
   src/${PROJECT_NAME}/cluster.cpp
+  src/${PROJECT_NAME}/blur.cpp
   src/devices/laserscan.cpp
   src/raytracers/NaiveRayTracer.cpp
+  src/raytracers/NoClearing.cpp
 )
 
 ## Add cmake target dependencies of the library
