--- a/teensy_bridge/CMakeLists.txt
+++ b/teensy_bridge/CMakeLists.txt
@@ -10,6 +10,9 @@ project(teensy_bridge)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   wireless_msgs
+  cv_bridge
+  image_transport
+  sensor_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -132,6 +135,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
+find_package(OpenCV REQUIRED)
 add_executable(${PROJECT_NAME}_node src/teensy_bridge_node.cpp)
 
 ## Rename C++ executable without prefix
@@ -147,6 +151,7 @@ add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catk
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node
   ${catkin_LIBRARIES}
+  ${OpenCV_LIBS}
 )
 
 #############
