add support for getting the LiDAR embedding

--- a/map_merge/CMakeLists.txt
+++ b/map_merge/CMakeLists.txt
@@ -181,7 +181,8 @@ target_link_libraries(${PROJECT_NAME}_viz
     Qt5::Core
     Qt5::Gui
     Qt5::Widgets
-    Qt5::Charts)
+    Qt5::Charts
+    ${PROJECT_NAME})
 #############
 ## Install ##
 #############
