Install unauthenticated packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -72,8 +72,8 @@ before_install:
   - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list' 
   - sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
   - sudo apt-get update
-  - sudo apt-get install -y ros-kinetic-desktop-full dpkg
-  - sudo apt-get install -y ros-kinetic-octomap ros-kinetic-octomap-ros ros-kinetic-octomap-msgs  
+  - sudo apt-get install -y --allow-unauthenticated ros-kinetic-desktop-full dpkg
+  - sudo apt-get install -y --allow-unauthenticated ros-kinetic-octomap ros-kinetic-octomap-ros ros-kinetic-octomap-msgs
   - source /opt/ros/$ROS_DISTRO/setup.bash
   # Prepare rosdep to install dependencies.
 
