Update darket_ros test with yolov3-tiny

--- a/rgbd_object_detection/darknet_ros/darknet_ros/test/yolov3-tiny.yaml
+++ b/rgbd_object_detection/darknet_ros/darknet_ros/test/yolov3-tiny.yaml
@@ -1,16 +1,11 @@
-image_view:
-
-  enable_opencv: true
-  wait_key_delay: 600
-
 yolo_model:
 
   config_file:
-    name: yolov2.cfg
+    name: yolov3-tiny.cfg
   weight_file:
-    name: yolov2.weights
+    name: yolov3-tiny.weights
   threshold:
-    value: 0.5
+    value: 0.3
   detection_classes:
     names:
       - person
