Fix compile bugs part 1

--- a/exploration_goal/CMakeLists.txt
+++ b/exploration_goal/CMakeLists.txt
@@ -30,10 +30,19 @@ include_directories(
 #   src/${PROJECT_NAME}/exploration_goal.cpp
 # )
 
-add_executable(exploration 
-                src/main.cpp)
+#add_executable(exploration_goal
+#                src/exploration_goal_node.cpp)
 
-target_link_libraries(exploration
+add_executable(global_graph_debug 
+                src/global_graph_node.cpp)
+
+#target_link_libraries(
+#  ${catkin_LIBRARIES}
+#  #${PROJECT_NAME}
+#  Eigen3::Eigen
+#)
+
+target_link_libraries(global_graph_debug
   ${catkin_LIBRARIES}
   #${PROJECT_NAME}
   Eigen3::Eigen
