Fix compilation error

--- a/exploration_goal/package.xml
+++ b/exploration_goal/package.xml
@@ -52,6 +52,7 @@
   <depend>graph_msgs</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>subt_msgs</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
