Move artifact reporter to use h_comms rosservice API instead of direct subt comms

--- a/artifact_reporter/CMakeLists.txt
+++ b/artifact_reporter/CMakeLists.txt
@@ -7,18 +7,11 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_ros
   tf2_msgs
   object_detection
-  subt_msgs
   geometry_msgs
-  subt_communication_broker
-  subt_ign
+  noroute_mesh
 )
 
 find_package(Boost REQUIRED)
-
-set(IGN_MATH_VER 6)
-find_package(ignition-math${IGN_MATH_VER} REQUIRED)
-set(IGN_MSGS_VER 4)
-find_package(ignition-msgs${IGN_MSGS_VER} REQUIRED)
 
 catkin_package()
 
@@ -34,7 +27,6 @@ add_dependencies(artifact_report_spam ${catkin_EXPORTED_TARGETS})
 
 target_link_libraries(artifact_report_spam
   ${catkin_LIBRARIES}
-  ignition-math${IGN_MATH_VER}::ignition-math${IGN_MATH_VER}
 )
 
 
