--- a/artifact_reporter/package.xml
+++ b/artifact_reporter/package.xml
@@ -14,28 +14,22 @@
   <build_depend>tf2</build_depend>
   <build_depend>tf2_msgs</build_depend>
   <build_depend>object_detection</build_depend>
-  <build_depend>subt_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>subt_communication_broker</build_depend>
-  <build_depend>subt_ign</build_depend>
+  <build_depend>noroute_mesh</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>tf2</build_export_depend>
   <build_export_depend>tf2_msgs</build_export_depend>
   <build_export_depend>object_detection</build_export_depend>
-  <build_export_depend>subt_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
-  <build_export_depend>subt_communication_broker</build_export_depend>
-  <build_export_depend>subt_ign</build_export_depend>
+  <build_export_depend>noroute_mesh</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>tf2</exec_depend>
   <exec_depend>tf2_msgs</exec_depend>
   <exec_depend>object_detection</exec_depend>
-  <exec_depend>subt_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>subt_communication_broker</exec_depend>
-  <exec_depend>subt_ign</exec_depend>
+  <exec_depend>noroute_mesh</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
