--- a/exploration_goal/package.xml
+++ b/exploration_goal/package.xml
@@ -53,7 +53,8 @@
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>subt_msgs</depend>
-
+<depend>amapper</depend>
+<depend>map_merge</depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
